--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,28 @@
+h1 {
+  text-align: center;
+}
+
+.float-right {
+  float: right;
+  height: 100px;
+}
+
+.float-left {
+  float: left;
+  height: 200px;
+  padding-right: 4px;
+}
+
+.centered {
+  text-align: center;
+}
+
+.top-padding{
+  padding: 40px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
 #side-panel{
   background-color: #f9f9f9;
   border: 1px solid #ddd;
@@ -17,16 +42,21 @@
   height: 100%;
 }
 
+.row {
+  margin: 0px;
+}
+
 #main-text {
   background-color: white;
-  padding-left: 185px;
-  padding-right: 25px;
+  padding-left: 175px;
+  padding-right: 15px;
   z-index: 0;
 }
 
 #top {
   background-color: #f9f9f9;
   border: 1px solid #ddd;
+  margin-top: 15px;
 }
 
 #middle {
@@ -40,7 +70,7 @@
   margin: 10px;
   margin-left: 0px;
   margin-right: 2px;
-  height: 100%
+  height: 100%;
 }
 #left-title {
   background-color: #cef2e0;
@@ -55,7 +85,7 @@
   margin: 10px;
   margin-right: 0px;
   margin-left: 2px;
-  height: 100%
+  height: 100%;
 }
 #right-title {
   background-color: #cedff2;
@@ -65,5 +95,15 @@
 
 #bottom {
   width: 100%;
-  background-color: gray;
+  background-color: #faf5ff;
+  border: 1px solid #ddcef2;
+  padding: 10px;
+  width: 100%;
+}
+
+#bottom-title {
+  background-color: #ddcef2;
+  padding: 10px;
+  border: 1px solid #afa3bf;
+  margin-left: 0px;
 }
